@@ -6,20 +6,23 @@ import java.util.List;
 public enum TipoPrenda {
   CAMISA_MANGA_LARGA(Categoria.PARTE_SUPERIOR,
       Arrays.asList(Material.LANA, Material.ALGODON,
-          Material.SEDA, Material.ACETATO, Material.PIQUE)),
-  CAMISA_MANGA_CORTA(Categoria.PARTE_SUPERIOR, Arrays.asList(Material.LANA,
-      Material.ALGODON, Material.SEDA, Material.ACETATO, Material.PIQUE)),
+          Material.SEDA, Material.ACETATO, Material.PIQUE), 0.00, 22.00),
+  CAMISA_MANGA_CORTA(Categoria.PARTE_SUPERIOR,
+      Arrays.asList(Material.LANA, Material.ALGODON, Material.SEDA,
+          Material.ACETATO, Material.PIQUE), 21.00, 35.00),
   CHOMBA(Categoria.PARTE_SUPERIOR, Arrays.asList(Material.LANA, Material.ALGODON,
-      Material.SEDA, Material.ACETATO, Material.PIQUE)),
+      Material.SEDA, Material.ACETATO, Material.PIQUE), 21.00, 35.00),
 
   JEAN(Categoria.PARTE_INFERIOR, Arrays.asList(Material.LANA, Material.ALGODON,
-      Material.SEDA, Material.ACETATO)),
+      Material.SEDA, Material.ACETATO), 0.00, 21.00),
   JOGGING(Categoria.PARTE_INFERIOR, Arrays.asList(Material.LANA, Material.ALGODON,
-      Material.SEDA, Material.ACETATO)),
-  ZAPATOS(Categoria.CALZADO, Arrays.asList(Material.CUERO, Material.CUERINA)),
-  ZAPATILLAS(Categoria.CALZADO, Arrays.asList(Material.CUERO, Material.CUERINA)),
-  GORRA(Categoria.ACCESORIOS, Arrays.asList(Material.LANA, Material.ALGODON)),
-  ANTEOJOS_DE_SOL(Categoria.ACCESORIOS, List.of(Material.PLASTICO));
+      Material.SEDA, Material.ACETATO), 10.00, 30.00),
+
+  ZAPATOS(Categoria.CALZADO, Arrays.asList(Material.CUERO, Material.CUERINA), 10.00, 20.00),
+  ZAPATILLAS(Categoria.CALZADO, Arrays.asList(Material.CUERO, Material.CUERINA), 0.00, 35.00),
+
+  GORRA(Categoria.ACCESORIOS, Arrays.asList(Material.LANA, Material.ALGODON), 5.00, 35.00),
+  ANTEOJOS_DE_SOL(Categoria.ACCESORIOS, List.of(Material.PLASTICO), 0.00, 35.00);
 
 
   //la palabra clave final se usa para indicar que un elemento
@@ -27,6 +30,8 @@ public enum TipoPrenda {
 
   private final Categoria categoria;
   private final List<Material> materialesCompatibles;
+  private final Double esAptaDesdeLaTempDe;
+  private final Double esAptaHastaLaTempDe;
 
   public Categoria getCategoria() {
     return this.categoria;
@@ -36,11 +41,21 @@ public enum TipoPrenda {
     return materialesCompatibles;
   }
 
+  public Double getEsAptaDesdeLaTempDe() {
+    return esAptaDesdeLaTempDe;
+  }
+
+  public Double getEsAptaHastaLaTempDe() {
+    return esAptaHastaLaTempDe;
+  }
+
   //el constructor es privado
-  TipoPrenda(Categoria categoria, List<Material> materialesCompatibles) {
+  TipoPrenda(Categoria categoria, List<Material> materialesCompatibles, Double esAptaDesdeLaTempDe, Double esAptaHastaLaTempDe) {
     this.categoria = categoria;
     this.materialesCompatibles = materialesCompatibles;
 
+    this.esAptaDesdeLaTempDe = esAptaDesdeLaTempDe;
+    this.esAptaHastaLaTempDe = esAptaHastaLaTempDe;
 
   }
 
